unpackaged/main/default/objects/EventApi__Vendor__c/EventApi__Vendor__c.object-meta.xml
<CustomObject>
    <description>Vendors track the various companies that provide services related to a Event.</description>
    <label>Vendor</label>
    <nameField>
        <label>Vendor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>