unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a CRM Account record related to the Vendor.</description>
    <inlineHelpText>Link to a CRM Account record related to the Vendor.</inlineHelpText>
    <label>CRM Account Link</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Events (Vendors)</relationshipLabel>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>