unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Airports__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Airports__c</fullName>
    <description>Enter the nearest airport(s) for the hotel.</description>
    <inlineHelpText>Enter the nearest airport(s) for the hotel.</inlineHelpText>
    <label>Nearest Airport(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>