unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Ameneties__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ameneties__c</fullName>
    <description>Select the amenities that the hotel offers.</description>
    <inlineHelpText>Select the amenities that the hotel offers.</inlineHelpText>
    <label>Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24-hour Gym</fullName>
            </value>
            <value>
                <fullName>Barber Shop</fullName>
            </value>
            <value>
                <fullName>Cigar Lounge</fullName>
            </value>
            <value>
                <fullName>Concierge Services</fullName>
            </value>
            <value>
                <fullName>Dry Cleaning Services</fullName>
            </value>
            <value>
                <fullName>Full Service Spa</fullName>
            </value>
            <value>
                <fullName>Gift Shop</fullName>
            </value>
            <value>
                <fullName>Hair Salon</fullName>
            </value>
            <value>
                <fullName>HDTV</fullName>
            </value>
            <value>
                <fullName>Indoor Pool(s)</fullName>
            </value>
            <value>
                <fullName>Laundry Services</fullName>
            </value>
            <value>
                <fullName>Outdoor Pool(s)</fullName>
            </value>
            <value>
                <fullName>Restaurant(s)</fullName>
            </value>
            <value>
                <fullName>Shoe Shine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>