unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__City__c.field-meta.xml
<CustomField>
    <fullName>EventApi__City__c</fullName>
    <description>Enter the city/province used to send payment.</description>
    <inlineHelpText>Enter the city/province used to send payment.</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>