unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Concierge_Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Concierge_Phone__c</fullName>
    <description>Enter the phone number for the hotel&#39;s concierge.</description>
    <inlineHelpText>Enter the phone number for the hotel&#39;s concierge.</inlineHelpText>
    <label>Concierge Phone</label>
    <type>Phone</type>
</CustomField>