unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact_Email__c</fullName>
    <description>** System Calculated Override ** Contact email for the Vendor. Derived from the related Primary Contact if defined.</description>
    <inlineHelpText>** System Calculated Override ** Contact email for the Vendor. Derived from the related Primary Contact if defined.</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>