unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact_Name__c</fullName>
    <description>Enter the full name of the primary contact.</description>
    <inlineHelpText>Enter the full name of the primary contact.</inlineHelpText>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>