unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact_Phone__c</fullName>
    <description>Enter the primary contact&#39;s preferred phone number.</description>
    <inlineHelpText>Enter the primary contact&#39;s preferred phone number.</inlineHelpText>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>