unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact_Title__c</fullName>
    <description>Enter the title of the primary contact.</description>
    <inlineHelpText>Enter the title of the primary contact.</inlineHelpText>
    <label>Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>