unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Country__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Country__c</fullName>
    <description>The country used to send payment.</description>
    <inlineHelpText>The country used to send payment.</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>