unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Description__c</fullName>
    <description>Optional description for the Vendor.</description>
    <inlineHelpText>Optional description for the Vendor.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>