unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Double_Room_Rate__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Double_Room_Rate__c</fullName>
    <description>Estimated daily rate for a double room at the hotel.</description>
    <inlineHelpText>Estimated daily rate for a double room at the hotel.</inlineHelpText>
    <label>Double Room Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>