unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Event.</description>
    <inlineHelpText>Link to the related Event.</inlineHelpText>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Vendors</relationshipLabel>
    <relationshipName>Vendors</relationshipName>
    <type>Lookup</type>
</CustomField>