unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Executive_Suite_Rate__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Executive_Suite_Rate__c</fullName>
    <description>Estimated daily rate for a executive suite at the hotel.</description>
    <inlineHelpText>Estimated daily rate for a executive suite at the hotel.</inlineHelpText>
    <label>Executive Suite Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>