unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Front_Desk_Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Front_Desk_Phone__c</fullName>
    <description>Enter the front desk phone number for the hotel.</description>
    <inlineHelpText>Enter the front desk phone number for the hotel.</inlineHelpText>
    <label>Front Desk Phone</label>
    <type>Phone</type>
</CustomField>