unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Hotel_Ameneties_Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Hotel_Ameneties_Description__c</fullName>
    <description>Describe the various amenities the hotel offers.</description>
    <inlineHelpText>Describe the various amenities the hotel offers.</inlineHelpText>
    <label>Hotel Amenities Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>