unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Hotel_Cancellation_Policy__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Hotel_Cancellation_Policy__c</fullName>
    <description>Describe the hotel&#39;s cancellation policy.</description>
    <inlineHelpText>Describe the hotel&#39;s cancellation policy.</inlineHelpText>
    <label>Hotel Cancellation Policy</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>