unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Hotel_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Hotel_Type__c</fullName>
    <description>** Conditionally Required ** Select the most appropriate type for the hotel. Required for all &quot;Hotel&quot; vendors.</description>
    <inlineHelpText>** Conditionally Required ** Select the most appropriate type for the hotel. Required for all &quot;Hotel&quot; vendors.</inlineHelpText>
    <label>Hotel Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Boutique</fullName>
            </value>
            <value>
                <fullName>Economy full service</fullName>
            </value>
            <value>
                <fullName>Economy limited service</fullName>
            </value>
            <value>
                <fullName>Economy resort</fullName>
            </value>
            <value>
                <fullName>Extended stay</fullName>
            </value>
            <value>
                <fullName>Full service</fullName>
            </value>
            <value>
                <fullName>Historic inn</fullName>
            </value>
            <value>
                <fullName>Luxury</fullName>
            </value>
            <value>
                <fullName>Luxury resort</fullName>
            </value>
            <value>
                <fullName>Motel</fullName>
            </value>
            <value>
                <fullName>Timeshare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>