unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Is_Published__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Display on the vendor page published on the event&#39;s website (if applicable).</description>
    <inlineHelpText>Display on the vendor page published on the event&#39;s website (if applicable).</inlineHelpText>
    <label>Publish to Website</label>
    <type>Checkbox</type>
</CustomField>