unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Local_Attractions__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Local_Attractions__c</fullName>
    <description>Describe any local or historic attractions that are close to the hotel.</description>
    <inlineHelpText>Describe any local or historic attractions that are close to the hotel.</inlineHelpText>
    <label>Local/Historic Attractions</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>