unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Logo_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Logo_Image_URL__c</fullName>
    <description>Secure (&quot;https://&quot;) location of a logo image to use for the Vendor on the event website (if applicable) and/or printed materials related to the event.</description>
    <inlineHelpText>Secure (&quot;https://&quot;) location of a logo image to use for the Vendor on the event website (if applicable) and/or printed materials related to the event.</inlineHelpText>
    <label>Logo Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>