unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Number_of_Rooms__c</fullName>
    <description>The number of rooms for the hotel.</description>
    <inlineHelpText>The number of rooms for the hotel.</inlineHelpText>
    <label>Number of Rooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>