unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Phone__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Phone__c</fullName>
    <description>** System Calculated Override ** Contact phone for the Vendor. Derived from the related Primary Contact if defined.</description>
    <inlineHelpText>** System Calculated Override ** Contact phone for the Vendor. Derived from the related Primary Contact if defined.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>