unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Postal_Code__c</fullName>
    <description>The zip or postal code used to send payment.</description>
    <inlineHelpText>The zip or postal code used to send payment.</inlineHelpText>
    <label>Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>