unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Preferred_Vendor__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Preferred_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Vendor should be considered the &quot;Preffered Vendor&quot;. Best practice would be to limit the &quot;Preffered Vendor&quot; attribute to one Vendor per Vendor Category defined for an Event. Defaults unchecked.</description>
    <inlineHelpText>When checked, the Vendor should be considered the &quot;Preffered Vendor&quot;. Best practice would be to limit the &quot;Preffered Vendor&quot; attribute to one Vendor per Vendor Category defined for an Event. Defaults unchecked.</inlineHelpText>
    <label>Preferred Vendor</label>
    <type>Checkbox</type>
</CustomField>