unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Room_Rates_Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Room_Rates_Description__c</fullName>
    <description>Describe the rates and room options for the hotel.</description>
    <inlineHelpText>Describe the rates and room options for the hotel.</inlineHelpText>
    <label>Room Rate(s) Description</label>
    <type>TextArea</type>
</CustomField>