unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Special_Discount_Information__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Special_Discount_Information__c</fullName>
    <description>Describe any event discounts the vendor is offering as a special/promotion for event attendees.</description>
    <inlineHelpText>Describe any event discounts the vendor is offering as a special/promotion for event attendees.</inlineHelpText>
    <label>Special Discount Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>