unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Standard_Suite_Rate__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Standard_Suite_Rate__c</fullName>
    <description>Estimated daily rate for a standard suite at the hotel.</description>
    <inlineHelpText>Estimated daily rate for a standard suite at the hotel.</inlineHelpText>
    <label>Standard Suite Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>