unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__State__c.field-meta.xml
<CustomField>
    <fullName>EventApi__State__c</fullName>
    <description>Enter the state or province used to send payment.</description>
    <inlineHelpText>Enter the state or province used to send payment.</inlineHelpText>
    <label>State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>