unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Street__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Street__c</fullName>
    <description>The mailing street address used to send payment.</description>
    <inlineHelpText>The mailing street address used to send payment.</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>