unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Type__c</fullName>
    <description>** Required ** The Type of Vendor is used to categorize and plan for an Event&#39;s Budget.</description>
    <inlineHelpText>** Required ** The Type of Vendor is used to categorize and plan for an Event&#39;s Budget.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airline</fullName>
            </value>
            <value>
                <fullName>Car Rental Company</fullName>
            </value>
            <value>
                <fullName>Catering Service Provider</fullName>
            </value>
            <value>
                <fullName>Equipment Rental Company</fullName>
            </value>
            <value>
                <fullName>Event Planner</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>