unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Vendor_Number__c</fullName>
    <description>** Unique Case Insensitive ** Enter a code for the vendor for batch expense entry.</description>
    <externalId>true</externalId>
    <inlineHelpText>** Unique Case Insensitive ** Enter a code for the vendor for batch expense entry.</inlineHelpText>
    <label>Vendor Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>