unpackaged/main/default/objects/EventApi__Vendor__c/fields/EventApi__Walking_Distance_Event__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Walking_Distance_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check the box if the hotel is within walking distance to the event.</description>
    <inlineHelpText>Check the box if the hotel is within walking distance to the event.</inlineHelpText>
    <label>Walking Distance to Event</label>
    <type>Checkbox</type>
</CustomField>