unpackaged/main/default/objects/EventApi__Vendor__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Vendor_Number__c</columns>
    <columns>EventApi__Phone__c</columns>
    <columns>EventApi__Type__c</columns>
    <columns>EventApi__Contact_Name__c</columns>
    <columns>EventApi__Contact_Email__c</columns>
    <columns>EventApi__Contact_Phone__c</columns>
    <columns>EventApi__Event__c</columns>
    <columns>EventApi__Preferred_Vendor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>